--- a/styles/main.scss
+++ b/styles/main.scss
@@ -14,6 +14,7 @@
 @import "partials/blocks/_backgrounds";
 @import "partials/blocks/_slogans";
 @import "partials/blocks/_section";
+@import "partials/blocks/_section-services";
 @import "partials/blocks/_section-about";
 @import "partials/blocks/_title";
 @import "partials/blocks/_section-benefits";
