--- a/styles/main.scss
+++ b/styles/main.scss
@@ -22,6 +22,7 @@
 @import "partials/blocks/_section-clients";
 @import "partials/blocks/_section-docs";
 @import "partials/blocks/_section-reviews";
+@import "partials/blocks/_section-support";
 @import "partials/blocks/_footer";
 @import "partials/blocks/_burger-menu";
 @import "partials/blocks/_slider";
