--- a/styles/partials/__palette.scss
+++ b/styles/partials/__palette.scss
@@ -28,3 +28,4 @@ $color-red: rgb(180, 47, 47);
 $color-black: #000;
 $color-white: #fff;
 $color-gold: rgba(255, 217, 0, 0.702);
+$color-red-light: rgba(180, 47, 47, 0.6);
