--- a/pages/style.css
+++ b/pages/style.css
@@ -597,6 +597,7 @@ body {
   display: flex;
   align-items: center;
   justify-content: flex-start;
+  flex-wrap: wrap;
   margin-bottom: 15px;
 }
 .section-services__tag {
@@ -608,6 +609,7 @@ body {
   border: 2px solid rgb(180, 47, 47);
   border-radius: 3px;
   margin-right: 10px;
+  margin-bottom: 15px;
   cursor: pointer;
 }
 .section-services__tag_active {
@@ -689,6 +691,11 @@ body {
   }
 }
 @media (max-width: 900px) {
+  .section-services__card {
+    flex: 0 1 99%;
+  }
+}
+@media (max-width: 380px) {
   .section-services__card {
     flex: 0 1 99%;
   }
@@ -972,6 +979,89 @@ body {
   font-weight: 300;
   text-align: justify;
   hyphens: auto;
+}
+
+.section-support__wrapper {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+.section-support__title {
+  padding-top: 15px;
+  padding-bottom: 15px;
+  color: #000;
+}
+.section-support__form {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: center;
+  border: 2px solid rgb(180, 47, 47);
+  border-radius: 10px;
+  margin-bottom: 15px;
+  padding: 30px 50px;
+  max-width: 500px;
+  width: 100%;
+  box-shadow: 5px 5px 10px rgb(190, 182, 182);
+}
+.section-support__form-title {
+  color: #000;
+  text-transform: uppercase;
+  font-weight: 400;
+  text-align: center;
+}
+.section-support__form-title::after {
+  display: block;
+  content: "";
+  width: 230px;
+  height: 1px;
+  background-color: rgb(180, 47, 47);
+  margin: 10px auto;
+}
+.section-support__form-text {
+  color: #000;
+  text-align: center;
+  margin-bottom: 15px;
+}
+.section-support__form-content {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-between;
+  width: 100%;
+}
+.section-support input,
+.section-support textarea {
+  width: 100%;
+  margin-bottom: 10px;
+  padding: 10px 15px;
+  border-radius: 5px;
+  border: 1px solid gray;
+  font-size: 16px;
+}
+.section-support textarea {
+  resize: none;
+  font-family: "Roboto", sans-serif;
+}
+.section-support input:focus,
+.section-support textarea:focus {
+  border: 1px solid #000;
+  outline: none;
+}
+.section-support input::placeholder,
+.section-support textarea::placeholder {
+  font-size: 16px;
+  font-family: "Roboto", sans-serif;
+}
+.section-support input[type=submit] {
+  border: none;
+  background-color: rgb(180, 47, 47);
+  color: #fff;
+}
+
+.input_invalid {
+  background-color: rgba(180, 47, 47, 0.6);
+  color: #fff;
 }
 
 .footer {
