--- a/styles/partials/blocks/__section-services.scss
+++ b/styles/partials/blocks/__section-services.scss
@@ -9,6 +9,7 @@
     display: flex;
     align-items: center;
     justify-content: flex-start;
+    flex-wrap: wrap;
     margin-bottom: 15px;
   }
 
@@ -21,6 +22,7 @@
     border: 2px solid $color-red;
     border-radius: 3px;
     margin-right: 10px;
+    margin-bottom: 15px;
     cursor: pointer;
 
     &_active {
@@ -123,6 +125,14 @@
 }
 
 @media (max-width: 900px) {
+  .section-services {
+    &__card {
+      flex: 0 1 99%;
+    }
+  }
+}
+
+@media (max-width: 380px) {
   .section-services {
     &__card {
       flex: 0 1 99%;
