--- a/pages/style.css
+++ b/pages/style.css
@@ -48,6 +48,11 @@ body {
   font-weight: 700;
 }
 
+@media (max-width: 600px) {
+  .main__wrapper {
+    padding-right: 8px;
+  }
+}
 .aside {
   grid-column: 2/3;
   background-color: rgb(180, 47, 47);
@@ -61,6 +66,7 @@ body {
 }
 .aside__wrapper .aside__list .aside__list-item {
   text-transform: uppercase;
+  font-size: 14px;
   font-weight: 700;
   padding-top: 5px;
   padding-bottom: 5px;
@@ -83,6 +89,11 @@ body {
   pointer-events: none;
 }
 
+@media (max-width: 600px) {
+  .aside {
+    display: none;
+  }
+}
 .header__wrapper {
   margin: 0 auto;
   padding: 0 10px;
@@ -401,6 +412,17 @@ body {
   background-color: rgba(255, 255, 255, 0.7);
 }
 
+@media (max-width: 555px) {
+  .section-exptitle__title-text {
+    text-align: center;
+    font-size: 28px;
+  }
+}
+@media (max-width: 440px) {
+  .section-exptitle__title-text {
+    font-size: 20px;
+  }
+}
 .title-bg-chem {
   background: url("../src/background/title/chem-title.jpg") no-repeat center;
   background-size: cover;
@@ -1057,6 +1079,7 @@ body {
   border: none;
   background-color: rgb(180, 47, 47);
   color: #fff;
+  cursor: pointer;
 }
 
 .input_invalid {
