--- a/styles/partials/blocks/__section-exptitle.scss
+++ b/styles/partials/blocks/__section-exptitle.scss
@@ -30,3 +30,20 @@
     background-color: rgba(255, 255, 255, 0.7);
   }
 }
+
+@media (max-width: 555px) {
+  .section-exptitle {
+    &__title-text {
+      text-align: center;
+      font-size: 28px;
+    }
+  }
+}
+
+@media (max-width: 440px) {
+  .section-exptitle {
+    &__title-text {
+      font-size: 20px;
+    }
+  }
+}
