--- a/pages/style.css
+++ b/pages/style.css
@@ -610,6 +610,9 @@ body {
   padding: 0 10px;
 }
 
+.section-services__wrapper {
+  padding: 0 90px;
+}
 .section-services__title {
   padding-top: 15px;
   padding-bottom: 15px;
@@ -655,14 +658,14 @@ body {
   display: flex;
   flex-direction: column;
   align-items: center;
-  flex: 0 1 32%;
+  flex: 0 1 30%;
   padding: 10px 15px;
   border-radius: 15px;
-  box-shadow: 5px 5px 10px rgb(190, 182, 182);
-  margin-bottom: 15px;
-  margin-right: 10px;
+  border: 1px solid rgb(180, 47, 47);
+  margin-bottom: 25px;
+  margin-right: 54px;
 }
-.section-services__card:last-child {
+.section-services__card:nth-child(3n+3) {
   margin-right: 0;
 }
 .section-services__card-content {
