--- a/styles/partials/blocks/__section-services.scss
+++ b/styles/partials/blocks/__section-services.scss
@@ -1,4 +1,7 @@
 .section-services {
+  &__wrapper {
+    padding: 0 90px;
+  }
   &__title {
     padding-top: 15px;
     padding-bottom: 15px;
@@ -50,15 +53,15 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    flex: 0 1 32%;
+    flex: 0 1 30%;
     padding: 10px 15px;
     border-radius: 15px;
-    box-shadow: 5px 5px 10px rgb(190, 182, 182);
-    margin-bottom: 15px;
-    margin-right: 10px;
+    border: 1px solid $color-red;
+    margin-bottom: 25px;
+    margin-right: 54px;
   }
 
-  &__card:last-child {
+  &__card:nth-child(3n + 3) {
     margin-right: 0;
   }
 
