--- a/styles/main.scss
+++ b/styles/main.scss
@@ -3,6 +3,7 @@
 @import "partials/__default";
 @import "partials/blocks/_collumn-2";
 @import "partials/blocks/_main";
+@import "partials/blocks/_anchor";
 @import "partials/blocks/_aside";
 @import "partials/blocks/__header";
 @import "partials/blocks/__social-media";
