--- a/pages/style.css
+++ b/pages/style.css
@@ -53,6 +53,30 @@ body {
     padding-right: 8px;
   }
 }
+.support-anchor {
+  display: none;
+  justify-content: center;
+  align-items: center;
+  position: fixed;
+  right: 10px;
+  bottom: 10px;
+  width: 100px;
+  height: 100px;
+  border-radius: 50%;
+  border: 1px solid #fff;
+  background-color: rgb(180, 47, 47);
+  cursor: pointer;
+}
+.support-anchor__icon {
+  width: 50px;
+  height: 50px;
+}
+
+@media (max-width: 1250px) {
+  .support-anchor {
+    display: flex;
+  }
+}
 .aside {
   grid-column: 2/3;
   background-color: rgb(180, 47, 47);
@@ -525,7 +549,7 @@ body {
 
 .slogans__body {
   position: relative;
-  padding-bottom: 30%;
+  padding-bottom: 40%;
   overflow: hidden;
   background: url("../src/background/slogans/video-screenshot.png") no-repeat center;
   background-size: cover;
@@ -555,8 +579,6 @@ body {
   top: 25%;
   left: 30px;
   z-index: 50;
-  transition: opacity 0.4s;
-  opacity: 0;
 }
 .slogans__list.active {
   opacity: 1;
@@ -572,7 +594,103 @@ body {
 .slogans__text:last-child {
   margin-bottom: 0;
 }
+.slogans__form {
+  position: absolute;
+  top: 157px;
+  right: 30px;
+  z-index: 50;
+  background-color: #fff;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: center;
+  border: 2px solid rgb(180, 47, 47);
+  border-radius: 10px;
+  margin-bottom: 15px;
+  padding: 30px 50px;
+  max-width: 400px;
+  width: 100%;
+  opacity: 0.85;
+}
+.slogans__form-title {
+  color: #000;
+  text-transform: uppercase;
+  font-weight: 400;
+  text-align: center;
+}
+.slogans__form-title::after {
+  display: block;
+  content: "";
+  width: 230px;
+  height: 1px;
+  background-color: rgb(180, 47, 47);
+  margin: 10px auto;
+}
+.slogans__form-text {
+  color: #000;
+  text-align: center;
+  margin-bottom: 15px;
+}
+.slogans__form-content {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-between;
+  width: 100%;
+}
+.slogans input,
+.slogans textarea {
+  width: 100%;
+  margin-bottom: 10px;
+  padding: 10px 15px;
+  border-radius: 5px;
+  border: 1px solid gray;
+  font-size: 16px;
+}
+.slogans textarea {
+  resize: none;
+  font-family: "Roboto", sans-serif;
+  height: 100px;
+}
+.slogans input:focus,
+.slogans textarea:focus {
+  border: 1px solid #000;
+  outline: none;
+}
+.slogans input::placeholder,
+.slogans textarea::placeholder {
+  font-size: 16px;
+  font-family: "Roboto", sans-serif;
+}
+.slogans input[type=submit] {
+  border: none;
+  background-color: rgb(180, 47, 47);
+  color: #fff;
+  cursor: pointer;
+}
+.slogans__form-privacy {
+  display: flex;
+  justify-content: flex-start;
+  width: 100%;
+}
+.slogans input[type=checkbox] {
+  max-width: 25px;
+}
+.slogans__label-text {
+  font-size: 12px;
+  color: #000;
+}
 
+@media (max-width: 1375px) {
+  .slogans__body {
+    padding-bottom: 45%;
+  }
+}
+@media (max-width: 1250px) {
+  .slogans__form {
+    display: none;
+  }
+}
 @media (max-width: 1120px) {
   .slogans .slogans__text {
     font-size: 20px;
@@ -649,10 +767,10 @@ body {
   pointer-events: none;
 }
 .section-services__cards {
-  display: flex;
-  justify-content: flex-start;
-  align-items: stretch;
-  flex-wrap: wrap;
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  gap: 40px;
+  margin-bottom: 15px;
 }
 .section-services__card {
   display: flex;
@@ -662,11 +780,6 @@ body {
   padding: 10px 15px;
   border-radius: 15px;
   border: 1px solid rgb(180, 47, 47);
-  margin-bottom: 25px;
-  margin-right: 54px;
-}
-.section-services__card:nth-child(3n+3) {
-  margin-right: 0;
 }
 .section-services__card-content {
   color: #000;
@@ -696,33 +809,42 @@ body {
   border-radius: 5px;
 }
 
-@media (max-width: 1400px) {
+@media (max-width: 1500px) {
+  .section-services__wrapper {
+    padding: 0 45px;
+  }
+}
+@media (max-width: 1350px) {
+  .section-services__wrapper {
+    padding: 0 25px;
+  }
   .section-services__cards {
-    justify-content: space-around;
-  }
-  .section-services__card {
-    flex: 0 1 49%;
-    margin-right: 0;
+    gap: 20px;
   }
 }
-@media (max-width: 1018px) {
-  .section-services__card {
-    flex: 0 1 48%;
+@media (max-width: 1265px) {
+  .section-services__wrapper {
+    padding: 0 10px;
+  }
+  .section-services__cards {
+    gap: 15px;
   }
 }
-@media (max-width: 940px) {
-  .section-services__card {
-    flex: 0 1 45%;
+@media (max-width: 1200px) {
+  .section-services__cards {
+    grid-template-columns: repeat(2, 1fr);
+    gap: 30px;
   }
 }
-@media (max-width: 900px) {
-  .section-services__card {
-    flex: 0 1 99%;
+@media (max-width: 970px) {
+  .section-services__cards {
+    gap: 15px;
   }
 }
-@media (max-width: 380px) {
-  .section-services__card {
-    flex: 0 1 99%;
+@media (max-width: 775px) {
+  .section-services__cards {
+    grid-template-columns: 1fr;
+    gap: 25px;
   }
 }
 .section-about {
@@ -752,6 +874,7 @@ body {
   padding-top: 15px;
   padding-bottom: 15px;
   background-color: rgb(180, 47, 47);
+  border-radius: 20px;
 }
 .section-about__info-text {
   font-size: 22px;
@@ -770,6 +893,7 @@ body {
   justify-content: center;
   align-items: center;
   max-width: 150px;
+  margin-bottom: 15px;
 }
 
 @media (max-width: 1250px) {
@@ -1006,6 +1130,9 @@ body {
   hyphens: auto;
 }
 
+.section-support {
+  display: none;
+}
 .section-support__wrapper {
   display: flex;
   flex-direction: column;
@@ -1084,12 +1211,29 @@ body {
   color: #fff;
   cursor: pointer;
 }
+.section-support__form-privacy {
+  display: flex;
+  justify-content: flex-start;
+  width: 100%;
+}
+.section-support input[type=checkbox] {
+  max-width: 25px;
+}
+.section-support__label-text {
+  font-size: 12px;
+  color: #000;
+}
 
 .input_invalid {
   background-color: rgba(180, 47, 47, 0.6);
   color: #fff;
 }
 
+@media (max-width: 1250px) {
+  .section-support {
+    display: block;
+  }
+}
 .footer {
   font-size: 18px;
 }
