--- a/styles/partials/blocks/__section-about.scss
+++ b/styles/partials/blocks/__section-about.scss
@@ -29,6 +29,7 @@
     padding-top: 15px;
     padding-bottom: 15px;
     background-color: $color-red;
+    border-radius: 20px;
   }
 
   &__info-text {
@@ -49,6 +50,7 @@
     justify-content: center;
     align-items: center;
     max-width: 150px;
+    margin-bottom: 15px;
   }
 }
 
