--- a/styles/partials/blocks/__section-services.scss
+++ b/styles/partials/blocks/__section-services.scss
@@ -43,10 +43,10 @@
   }
 
   &__cards {
-    display: flex;
-    justify-content: flex-start;
-    align-items: stretch;
-    flex-wrap: wrap;
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    gap: 40px;
+    margin-bottom: 15px;
   }
 
   &__card {
@@ -57,12 +57,6 @@
     padding: 10px 15px;
     border-radius: 15px;
     border: 1px solid $color-red;
-    margin-bottom: 25px;
-    margin-right: 54px;
-  }
-
-  &__card:nth-child(3n + 3) {
-    margin-right: 0;
   }
 
   &__card-content {
@@ -99,46 +93,59 @@
 }
 
 //Адаптиив
-@media (max-width: 1400px) {
+@media (max-width: 1500px) {
+  .section-services {
+    &__wrapper {
+      padding: 0 45px;
+    }
+  }
+}
+
+@media (max-width: 1350px) {
+  .section-services {
+    &__wrapper {
+      padding: 0 25px;
+    }
+
+    &__cards {
+      gap: 20px;
+    }
+  }
+}
+
+@media (max-width: 1265px) {
+  .section-services {
+    &__wrapper {
+      padding: 0 10px;
+    }
+
+    &__cards {
+      gap: 15px;
+    }
+  }
+}
+@media (max-width: 1200px) {
   .section-services {
     &__cards {
-      justify-content: space-around;
-    }
-    &__card {
-      flex: 0 1 49%;
-      margin-right: 0;
+      grid-template-columns: repeat(2, 1fr);
+      gap: 30px;
     }
   }
 }
 
-@media (max-width: 1018px) {
+@media (max-width: 970px) {
   .section-services {
-    &__card {
-      flex: 0 1 48%;
+    &__cards {
+      gap: 15px;
     }
   }
 }
 
-@media (max-width: 940px) {
+@media (max-width: 775px) {
   .section-services {
-    &__card {
-      flex: 0 1 45%;
-    }
-  }
-}
-
-@media (max-width: 900px) {
-  .section-services {
-    &__card {
-      flex: 0 1 99%;
-    }
-  }
-}
-
-@media (max-width: 380px) {
-  .section-services {
-    &__card {
-      flex: 0 1 99%;
+    &__cards {
+      grid-template-columns: 1fr;
+      gap: 25px;
     }
   }
 }
