--- a/styles/partials/blocks/__section-support.scss
+++ b/styles/partials/blocks/__section-support.scss
@@ -1,4 +1,6 @@
 .section-support {
+  display: none;
+
   &__wrapper {
     display: flex;
     flex-direction: column;
@@ -87,9 +89,30 @@
     color: $color-white;
     cursor: pointer;
   }
+
+  &__form-privacy {
+    display: flex;
+    justify-content: flex-start;
+    width: 100%;
+  }
+
+  input[type="checkbox"] {
+    max-width: 25px;
+  }
+
+  &__label-text {
+    font-size: 12px;
+    color: $color-black;
+  }
 }
 
 .input_invalid {
   background-color: $color-red-light;
   color: $color-white;
+}
+
+@media (max-width: 1250px) {
+  .section-support {
+    display: block;
+  }
 }
