--- a/styles/partials/blocks/__slogans.scss
+++ b/styles/partials/blocks/__slogans.scss
@@ -1,7 +1,7 @@
 .slogans {
   &__body {
     position: relative;
-    padding-bottom: 30%;
+    padding-bottom: 40%;
     overflow: hidden;
     background: url("../src/background/slogans/video-screenshot.png") no-repeat
       center;
@@ -35,8 +35,8 @@
     top: 25%;
     left: 30px;
     z-index: 50;
-    transition: opacity 0.4s;
-    opacity: 0;
+    // transition: opacity 0.4s;
+    // opacity: 0;
   }
 
   &__list.active {
@@ -55,9 +55,124 @@
   &__text:last-child {
     margin-bottom: 0;
   }
+
+  &__form {
+    position: absolute;
+    top: 157px;
+    right: 30px;
+    z-index: 50;
+    background-color: $color-white;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: center;
+    border: 2px solid $color-red;
+    border-radius: 10px;
+    margin-bottom: 15px;
+    padding: 30px 50px;
+    max-width: 400px;
+    width: 100%;
+    opacity: 0.85;
+  }
+
+  &__form-title {
+    color: $color-black;
+    text-transform: uppercase;
+    font-weight: 400;
+    text-align: center;
+  }
+
+  &__form-title::after {
+    display: block;
+    content: "";
+    width: 230px;
+    height: 1px;
+    background-color: $color-red;
+    margin: 10px auto;
+  }
+
+  &__form-text {
+    color: $color-black;
+    text-align: center;
+    margin-bottom: 15px;
+  }
+
+  &__form-content {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-between;
+    width: 100%;
+  }
+
+  input,
+  textarea {
+    width: 100%;
+    margin-bottom: 10px;
+    padding: 10px 15px;
+    border-radius: 5px;
+    border: 1px solid gray;
+    font-size: 16px;
+  }
+
+  textarea {
+    resize: none;
+    font-family: "Roboto", sans-serif;
+    height: 100px;
+  }
+
+  input:focus,
+  textarea:focus {
+    border: 1px solid $color-black;
+    outline: none;
+  }
+
+  input::placeholder,
+  textarea::placeholder {
+    font-size: 16px;
+    font-family: "Roboto", sans-serif;
+  }
+
+  input[type="submit"] {
+    border: none;
+    background-color: $color-red;
+    color: $color-white;
+    cursor: pointer;
+  }
+
+  &__form-privacy {
+    display: flex;
+    justify-content: flex-start;
+    width: 100%;
+  }
+
+  input[type="checkbox"] {
+    max-width: 25px;
+  }
+
+  &__label-text {
+    font-size: 12px;
+    color: $color-black;
+  }
 }
 
 //Медиа-запросы
+@media (max-width: 1375px) {
+  .slogans {
+    &__body {
+      padding-bottom: 45%;
+    }
+  }
+}
+
+@media (max-width: 1250px) {
+  .slogans {
+    &__form {
+      display: none;
+    }
+  }
+}
+
 @media (max-width: 1120px) {
   .slogans {
     .slogans__text {
