--- a/styles/partials/blocks/__service-menu.scss
+++ b/styles/partials/blocks/__service-menu.scss
@@ -144,6 +144,10 @@
     border-radius: 8px 8px 0 0;
     background-color: $color-red;
 
+    &__list {
+      display: none;
+    }
+
     &__link {
       color: $color-white;
     }
