--- a/pages/style.css
+++ b/pages/style.css
@@ -550,6 +550,11 @@ body {
   background-size: cover;
 }
 
+.title-bg-about {
+  background: url("../src/background/title/about-title.jpg") no-repeat center;
+  background-size: cover;
+}
+
 .slogans__body {
   position: relative;
   padding-bottom: 40%;
