--- a/styles/partials/blocks/__backgrounds.scss
+++ b/styles/partials/blocks/__backgrounds.scss
@@ -99,3 +99,8 @@
   background: url("../src/background/title/contacts.jpg") no-repeat center;
   background-size: cover;
 }
+
+.title-bg-about {
+  background: url("../src/background/title/about-title.jpg") no-repeat center;
+  background-size: cover;
+}
