--- a/styles/partials/blocks/__backgrounds.scss
+++ b/styles/partials/blocks/__backgrounds.scss
@@ -1,106 +1,105 @@
 //1. Химическая экспертиза
 .title-bg-chem {
-  background: url("../src/background/title/chem-title.jpg") no-repeat center;
+  background: url("src/background/title/chem-title.jpg") no-repeat center;
   background-size: cover;
 }
 
 .title-bg-tovar {
-  background: url("../src/background/title/tovar-title.jpg") no-repeat center;
+  background: url("src/background/title/tovar-title.jpg") no-repeat center;
   background-size: cover;
 }
 
 .title-bg-ecology {
-  background: url("../src/background/title/ecology-title.jpg") no-repeat center;
+  background: url("src/background/title/ecology-title.jpg") no-repeat center;
   background-size: cover;
 }
 
 .title-bg-lingvo {
-  background: url("../src/background/title/lingvo-title.jpg") no-repeat center;
+  background: url("src/background/title/lingvo-title.jpg") no-repeat center;
   background-size: cover;
 }
 
 .title-bg-author {
-  background: url("../src/background/title/author-title.jpg") no-repeat center;
+  background: url("src/background/title/author-title.jpg") no-repeat center;
   background-size: cover;
 }
 
 .title-bg-stroitel {
-  background: url("../src/background/title/stroitel-title.jpg") no-repeat center;
+  background: url("src/background/title/stroitel-title.jpg") no-repeat center;
   background-size: cover;
 }
 
 .title-bg-economy {
-  background: url("../src/background/title/economy-title.jpg") no-repeat center;
+  background: url("src/background/title/economy-title.jpg") no-repeat center;
   background-size: cover;
 }
 
 .title-bg-computer {
-  background: url("../src/background/title/computer-title.jpg") no-repeat center;
+  background: url("src/background/title/computer-title.jpg") no-repeat center;
   background-size: cover;
 }
 
 .title-bg-video {
-  background: url("../src/background/title/video-title.jpg") no-repeat center;
+  background: url("src/background/title/video-title.jpg") no-repeat center;
   background-size: cover;
 }
 
 .title-bg-photo {
-  background: url("../src/background/title/photo-title.jpg") no-repeat center;
+  background: url("src/background/title/photo-title.jpg") no-repeat center;
   background-size: cover;
 }
 
 .title-bg-old {
-  background: url("../src/background/title/old-title.jpg") no-repeat center;
+  background: url("src/background/title/old-title.jpg") no-repeat center;
   background-size: cover;
 }
 
 .title-bg-car {
-  background: url("../src/background/title/car-title.jpg") no-repeat center;
+  background: url("src/background/title/car-title.jpg") no-repeat center;
   background-size: cover;
 }
 
 .title-bg-phone {
-  background: url("../src/background/title/phone-title.jpg") no-repeat center;
+  background: url("src/background/title/phone-title.jpg") no-repeat center;
   background-size: cover;
 }
 
 .title-bg-land {
-  background: url("../src/background/title/land-title.jpg") no-repeat center;
+  background: url("src/background/title/land-title.jpg") no-repeat center;
   background-size: cover;
 }
 
 .title-bg-patent {
-  background: url("../src/background/title/patent-title.jpg") no-repeat bottom;
+  background: url("src/background/title/patent-title.jpg") no-repeat bottom;
   background-size: cover;
 }
 
 .title-bg-polygraph {
-  background: url("../src/background/title/polygraph-title.jpg") no-repeat
-    center;
+  background: url("src/background/title/polygraph-title.jpg") no-repeat center;
   background-size: cover;
 }
 
 .title-bg-psycho {
-  background: url("../src/background/title/psycho-title.jpg") no-repeat center;
+  background: url("src/background/title/psycho-title.jpg") no-repeat center;
   background-size: cover;
 }
 
 .title-bg-law {
-  background: url("../src/background/title/law-title.jpg") no-repeat center;
+  background: url("src/background/title/law-title.jpg") no-repeat center;
   background-size: cover;
 }
 
 .title-bg-portrait {
-  background: url("../src/background/title/portrait-title.jpg") no-repeat top;
+  background: url("src/background/title/portrait-title.jpg") no-repeat top;
   background-size: cover;
 }
 
 .title-bg-contacts {
-  background: url("../src/background/title/contacts.jpg") no-repeat center;
+  background: url("src/background/title/contacts.jpg") no-repeat center;
   background-size: cover;
 }
 
 .title-bg-about {
-  background: url("../src/background/title/about-title.jpg") no-repeat center;
+  background: url("src/background/title/about-title.jpg") no-repeat center;
   background-size: cover;
 }
