--- a/style.css
+++ b/style.css
@@ -162,18 +162,18 @@ body {
   transition-duration: 500ms;
 }
 .social-media__whatsapp_white {
-  background-image: url("../src/icons/social-media/icon-whatsapp-white.svg");
+  background-image: url("src/icons/social-media/icon-whatsapp-white.svg");
   transition-property: background-image;
   transition-duration: 500ms;
 }
 .social-media__telegramm_white {
-  background-image: url("../src/icons/social-media/icon-telegramm-white.svg");
+  background-image: url("src/icons/social-media/icon-telegramm-white.svg");
 }
 .social-media__whatsapp_white:hover {
-  background-image: url("../src/icons/social-media/icon-whatsapp-gold.svg");
+  background-image: url("src/icons/social-media/icon-whatsapp-gold.svg");
 }
 .social-media__telegramm_white:hover {
-  background-image: url("../src/icons/social-media/icon-telegramm-gold.svg");
+  background-image: url("src/icons/social-media/icon-telegramm-gold.svg");
 }
 
 .order-call__btn {
