--- a/styles/partials/blocks/__social-media.scss
+++ b/styles/partials/blocks/__social-media.scss
@@ -26,20 +26,20 @@
 
   //Icon white
   &__whatsapp_white {
-    background-image: url("../src/icons/social-media/icon-whatsapp-white.svg");
+    background-image: url("src/icons/social-media/icon-whatsapp-white.svg");
     transition-property: background-image;
     transition-duration: 500ms;
   }
 
   &__telegramm_white {
-    background-image: url("../src/icons/social-media/icon-telegramm-white.svg");
+    background-image: url("src/icons/social-media/icon-telegramm-white.svg");
   }
 
   &__whatsapp_white:hover {
-    background-image: url("../src/icons/social-media/icon-whatsapp-gold.svg");
+    background-image: url("src/icons/social-media/icon-whatsapp-gold.svg");
   }
 
   &__telegramm_white:hover {
-    background-image: url("../src/icons/social-media/icon-telegramm-gold.svg");
+    background-image: url("src/icons/social-media/icon-telegramm-gold.svg");
   }
 }
