--- a/styles/partials/blocks/__backgrounds.scss
+++ b/styles/partials/blocks/__backgrounds.scss
@@ -103,3 +103,8 @@
   background: url("src/background/title/about-title.jpg") no-repeat center;
   background-size: cover;
 }
+
+.title-bg-privacy {
+  background: url("src/background/title/privacy-title.jpg") no-repeat center;
+  background-size: cover;
+}
